Update GC logging flags in README