@@ -466,7 +466,7 @@ orderBook.showOrders();
     
 ```
 ## How can I check that it is zero garbage?
-Check [NoGCTest.java](https://github.com/coralblocks/CoralME/blob/main/src/main/java/com/coralblocks/coralme/example/NoGCTest.java) to see that it creates a book and populates this book with 10 orders _one million times_. And on each of these one million times it does a bunch of executions, rejects, cancelations, reduces, etc. Run this test with `-verbose:gc -Xms32m -Xmx64m` and you will always see **zero GC activity**. _No matter how many iterations you perform, the gc activity is always zero_. If you want to see some GC activity, you can turn on a flag that forces the creation of garbage by [producing some strings](https://github.com/coralblocks/CoralME/blob/bb9461313537987db43339e429b7314e58bbb784/src/main/java/com/coralblocks/coralme/example/NoGCTest.java#L103) in the middle of the loop.
+Check [NoGCTest.java](https://github.com/coralblocks/CoralME/blob/main/src/main/java/com/coralblocks/coralme/example/NoGCTest.java) to see that it creates a book and populates this book with 10 orders _one million times_. And on each of these one million times it does a bunch of executions, rejects, cancelations, reduces, etc. Run this test with `-Xlog:gc -Xms32m -Xmx64m` and you will always see **zero GC activity**. _No matter how many iterations you perform, the gc activity is always zero_. If you want to see some GC activity, you can turn on a flag that forces the creation of garbage by [producing some strings](https://github.com/coralblocks/CoralME/blob/bb9461313537987db43339e429b7314e58bbb784/src/main/java/com/coralblocks/coralme/example/NoGCTest.java#L103) in the middle of the loop.
  
 ##### Creating ZERO garbage
 ```
@@ -477,7 +477,7 @@ java -Xlog:gc -Xms32m -Xmx64m -cp target/coralme-all.jar com.coralblocks.coralme
 ##### Forcing the creation of garbage (pass true to runGCTest.sh)
 ```
 $ ./bin/runGCTest.sh true
-java -verbose:gc -Xms128m -Xmx256m -cp target/classes com.coralblocks.coralme.example.NoGCTest true 1000000
+java -Xlog:gc -Xms32m -Xmx64m -cp target/coralme-all.jar com.coralblocks.coralme.example.NoGCTest true 1000000
 [0.008s][info][gc] Using G1
 20000[0.114s][info][gc] GC(0) Pause Young (Normal) (G1 Evacuation Pause) 14M->1M(34M) 0.565ms
 50000[0.159s][info][gc] GC(1) Pause Young (Normal) (G1 Evacuation Pause) 19M->1M(34M) 0.236ms
